--- a/block-BRaabd/code/image/src/style/button.css
+++ b/block-BRaabd/code/image/src/style/button.css
@@ -3,3 +3,14 @@ button {
   margin: 10px;
   cursor: pointer;
 }
+
+.section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  display: block;
+  width: 550px;
+}
